# lab2

./: .gitignore  CMakeLists.txt  Lab2.ipynb  README.md  auto_build_run.sh
images/: show_output_images.sh
report/: template.tex
src/: imgproc-benchmark.cpp
src/baseline/: imgproc.cpp  imgproc.hpp  water.cpp  water.hpp
src/lodepng/: lodepng.h
src/students/: cuda_check.hpp  imgproc_cuda.cu  imgproc_cuda.hpp  water_cuda.cu  water_cuda.hpp
src/utils/: Histogram.cpp  Histogram.hpp  Image.cpp  Image.hpp  Kernel.cpp  Kernel.hpp  Timer.hpp
